force-app/main/default/objects/Deal_Auto_Sync_Stages__c/Deal_Auto_Sync_Stages__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Deal Auto Sync Stages</label>
</CustomObject>