force-app/main/default/objects/Deal_Auto_Sync_Stages__c/fields/Closed_Fail__c.field-meta.xml
<CustomField>
    <fullName>Closed_Fail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether reaching this stage defines a negative outcome for the deal.</description>
    <inlineHelpText>Indicates whether reaching this stage defines a negative outcome for the deal.</inlineHelpText>
    <label>Closed Fail</label>
    <type>Checkbox</type>
</CustomField>