force-app/main/default/objects/Deal_Auto_Sync_Stages__c/fields/Closed_Success__c.field-meta.xml
<CustomField>
    <fullName>Closed_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether reaching this stage defines a positive outcome for the deal.</description>
    <inlineHelpText>Indicates whether reaching this stage defines a positive outcome for the deal.</inlineHelpText>
    <label>Closed Success</label>
    <type>Checkbox</type>
</CustomField>