force-app/main/default/objects/Deal_Auto_Sync_Stages__c/fields/Default_Sync_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Sync_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The default auto synch value to set on the deal when the deal is set to this stage. The auto synch value determines whether Deal data will be automatically copied to the associated village presence during the deal process.</description>
    <inlineHelpText>The default auto synch value to set on the deal when the deal is set to this stage. The auto synch value determines whether Deal data will be automatically copied to the associated village presence during the deal process.</inlineHelpText>
    <label>Default Sync Value</label>
    <type>Checkbox</type>
</CustomField>