force-app/main/default/objects/Deal_Auto_Sync_Stages__c/fields/Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Stage_Name__c</fullName>
    <label>Stage Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>