force-app/main/default/objects/Deal_Auto_Sync_Stages__c/listViews/All_Stage_Values.listView-meta.xml
<ListView>
    <fullName>All_Stage_Values</fullName>
    <columns>NAME</columns>
    <columns>Default_Sync_Value__c</columns>
    <columns>Closed_Fail__c</columns>
    <columns>Closed_Success__c</columns>
    <columns>Stage_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Stage Values</label>
</ListView>